# nbody

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  cmake.sh  log.txt  log2.txt  shaders.sh  tmp.cpp
.cache/clangd/index/: app.cpp.C95FE454DD3321EF.idx  app.hpp.5869EEE30E44733F.idx  app_interface.cppm.DE56E215A6E15050.idx  circle.hpp.280463825335472B.idx  cli_base.cpp.C22901285F01304E.idx  cli_interface.cppm.2718384EB41B363E.idx  data.hpp.326968CE62A2CE04.idx  definitions.hpp.2A2CDFE913944FAA.idx  dependencies.hpp.A2669C0CA9FF0181.idx  macros.hpp.9F6EC7B2184630AE.idx  main.cpp.ABFA436882330C6A.idx  matrix.hpp.3FEFC48D29BA9CC4.idx  policies.hpp.1A1D83D66A52C87D.idx  renderer.cpp.6F5E4BB567191AA8.idx  renderer.hpp.CB620BF9022DDE4D.idx  renderer_interface.cppm.6483F79CB32C4361.idx  renderer_vulkan.cpp.FBD130F6047C1FF0.idx  simulation_base.cpp.EC5F6E5918145198.idx  simulation_cpu.cpp.590D533CEDA9A616.idx  simulation_interface.cppm.C2430784817D024C.idx  util_interface.cppm.8B244D4327EB8FF2.idx
simulations/: sample.yml  spiral.yml  spiral2.yml  tester.yml
src/: main.cpp
src/app/: app.cpp  app.hpp  app_interface.cppm
src/camera/: camera.hpp
src/cli/: cli.cpp  cli.hpp  cli_base.cpp  cli_interface.cppm
src/config/: config.cpp  config.hpp
src/data/: data.cppm  data.hpp
src/definitions/: circle.hpp  cliargs.cppm  cliargs.hpp  data.hpp  definitions.hpp  graphics.hpp  macros.hpp  matrix.hpp  policies.hpp
src/dependencies/: dependencies.hpp
src/graphics/CommandBuffer/: CommandBuffer.cpp  CommandBuffer.hpp
src/graphics/FrameData/: FrameData.cpp  FrameData.hpp
src/graphics/LogicalDevice/: LogicalDevice.cpp  LogicalDevice.hpp
src/graphics/PhysicalDevice/: PhysicalDevice.cpp  PhysicalDevice.hpp
src/graphics/SoABuffers/: SoABuffers.cpp  SoABuffers.hpp
src/graphics/Swapchain/: Swapchain.cpp  Swapchain.hpp
src/graphics/UBOBuffer/: UBOBuffer.cpp  UBOBuffer.hpp
src/graphics/logicaldevice/: logicaldevice.cpp  logicaldevice.hpp
src/graphics/physicaldevice/: physicaldevice.cpp  physicaldevice.hpp
src/graphics/swapchain/: swapchain.cpp  swapchain.hpp
src/matrix/: matrix.cppm  matrix.hpp
src/parser/: parser.cpp  parser.hpp
src/quadtree/: quadtree.hpp
src/renderer/: renderer.cpp  renderer.hpp  renderer_interface.cppm  renderer_shaders.cpp  renderer_utils.cpp  renderer_vulkan.cpp
src/shaders/: circle.frag  circle.vert  circles.slang  circles.spv  tri.slang  tri.spv
src/simulation/: simulation.cpp  simulation.cppm  simulation.hpp  simulation_base.cpp  simulation_cpu.cpp  simulation_cpu_bh.cpp  simulation_gpu.cpp  simulation_interface.cppm
src/util/: util.cpp  util.hpp  util_fp.cpp  util_interface.cppm
